--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: nb_config_manager
-  version: "0.1.0"
+  version: "0.1.1"
 
 build:
   number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
@@ -11,7 +11,7 @@ requirements:
     - python
   run:
     - python
-    - notebook ==4.1.0rc1
+    - notebook ==4.1.0
 
 source:
   path: ../
